Issue 105 : Dark Mode + Theming #118  (#119)
* Dark Mode + Theming

* Themes scss file created with default color scheme and dark color scheme.

* Logic for managing dark mode toggle added.

* Modified existing scss/html to work with theme toggling.

* Fixed hover issues

* Added enable_darkmode to configs.  

* Added the requested option of disabling/enabling dark mode via config files.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,9 +5,9 @@
 // Typography
 
 a, table.table a {
-  color: $theme-color;
+  color: var(--global-theme-color);
   &:hover {
-    color: $theme-color;
+    color: var(--global-theme-color);
     text-decoration: underline;
   }
   &:hover:after {
@@ -65,7 +65,7 @@ a, table.table a {
     color: inherit;
     font-size: 0.875rem;
     &:hover {
-      color: $theme-color;
+      color: var(--global-theme-color);
       text-decoration: none;
     }
   }
@@ -78,6 +78,7 @@ a, table.table a {
   box-shadow: none;
   border-bottom: 1px solid $grey-color-light;
   opacity: 0.95;
+  background-color: var(--global-bg-color);
 }
 .navbar.navbar-light {
   // Remove link decoration
@@ -86,25 +87,27 @@ a, table.table a {
       text-decoration: none;
     }
   }
+  .navbar-brand {
+    color: var(--global-text-color);
+  }
   .navbar-nav .nav-item .nav-link {
     &:hover {
-      color: $theme-color;
+      color: var(--global-hover-color);
     }
   }
   .navbar-nav .nav-item.active>.nav-link {
       background-color: inherit;
-      color: $theme-color;
       font-weight: bolder;
+      color: var(--global-theme-color);
       &:hover {
-        color: $theme-color;
+        color: var(--global-hover-color);
       }
   }
   .contact-icon {
     font-size: 2rem;
     a {
-      color: $grey-color-dark;
       &:hover {
-        color: $theme-color;
+        color: var(--global-hover-color);
       }
     }
   }
@@ -150,8 +153,12 @@ a, table.table a {
 
 .news table td {
   font-size: 1rem;
+  color: var(--global-text-color);
 }
 
+.news table th {
+  color: var(--global-text-color);
+}
 
 // Social (bottom)
 
@@ -160,9 +167,9 @@ a, table.table a {
   .contact-icon {
     font-size: 4rem;
     a {
-      color: $grey-color-dark;
+      color: var(--global-icon-color);
       &:hover {
-        color: $theme-color;
+        color: var(--global-theme-color);
       }
     }
   }
@@ -173,19 +180,18 @@ a, table.table a {
 
 
 // Footer
-
 footer.fixed-bottom {
-  color: lighten($grey-color, 25%);
-  background-color: $grey-color-dark;
+  color: var(--global-footer-text-color);
+  background-color: var(--global-footer-bg-color);
   font-size: 0.75rem;
   .container {
     padding-top: 9px;
     padding-bottom: 8px;
   }
   a {
-    color: white;
+    color: var(--global-footer-link-color);
     &:hover {
-      color: lighten($theme-color, 25%);
+      color: pink;
       text-decoration: none;
     }
   }
@@ -207,7 +213,7 @@ footer.sticky-bottom {
   padding-top: 2rem;
   padding-bottom: 5rem;
   h1 {
-    color: $theme-color;
+    color: var(--global-theme-color);
     font-size: 5rem;
   }
 }
@@ -227,19 +233,19 @@ footer.sticky-bottom {
       margin-bottom: 0;
     }
     a {
-      color: black;
+      color: var(--global-text-color);
       text-decoration: none;
       &:hover {
-        color: $theme-color;
+        color: var(--global-theme-color);
       }
     }
   }
 }
 
 .pagination .page-item.active .page-link {
-  background-color: $theme-color;
+  background-color: var(--global-theme-color);
   &:hover {
-    background-color: $theme-color;
+    background-color: var(--global-theme-color);
   }
 }
 
@@ -248,7 +254,7 @@ footer.sticky-bottom {
 
 .distill {
   a:hover {
-    border-bottom-color: $theme-color;
+    border-bottom-color: var(--global-theme-color);
     text-decoration: none;
   }
 }
@@ -264,7 +270,7 @@ footer.sticky-bottom {
       color: black;
       text-decoration: none;
       &:hover {
-        color: $theme-color;
+        color: var(--global-theme-color);
       }
     }
   }
@@ -279,7 +285,7 @@ footer.sticky-bottom {
 .publications {
   margin-top: 2rem;
   h1 {
-    color: $theme-color;
+    color: var(--global-theme-color);
     font-size: 2rem;
     text-align: center;
     margin-top: 1em;
@@ -311,7 +317,7 @@ footer.sticky-bottom {
         margin-bottom: 0.5rem;
         abbr {
           display: inline-block;
-          background-color: $theme-color;
+          background-color: var(--global-theme-color);
           padding-left: 1rem;
           padding-right: 1rem;
           a {
@@ -322,8 +328,8 @@ footer.sticky-bottom {
           }
         }
         .award {
-          color: $theme-color !important;
-          border: 1px solid $theme-color;
+          color: var(--global-theme-color) !important;
+          border: 1px solid var(--global-theme-color);
         }
       }
       .title {
@@ -331,7 +337,7 @@ footer.sticky-bottom {
       }
       .author {
         a {
-          border-bottom: 1px dashed $theme-color;
+          border-bottom: 1px dashed var(--global-theme-color);
           &:hover {
               border-bottom-style: solid;
               text-decoration: none;
@@ -344,15 +350,15 @@ footer.sticky-bottom {
       }
       .links {
         a.btn {
-          color: $text-color;
-          border: 1px solid $text-color;
+          color: var(--global-text-color);
+          border: 1px solid var(--global-text-color);
           padding-left: 1rem;
           padding-right: 1rem;
           padding-top: 0.25rem;
           padding-bottom: 0.25rem;
           &:hover {
-            color: $theme-color;
-            border-color: $theme-color;
+            color: var(--global-theme-color);
+            border-color: var(--global-theme-color);
           }
         }
       }
@@ -393,4 +399,17 @@ footer.sticky-bottom {
       }
     }
   }
+}
+
+// Rouge Color Customization
+code {
+  color: var(--global-theme-color);
+}
+// Transitioning Themes
+html.transition,
+html.transition *,
+html.transition *:before,
+html.transition *:after {
+  transition: all 750ms !important;
+  transition-delay: 0 !important;
 }
